[package]
name = "wasmedge_sdk_async_wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

wasmedge-async-wasi = { path = "./wasmedge_async_wasi", features = [
    "async_tokio",
] }


wasmedge-sdk = { git = "https://github.com/second-state/WasmEdge.git", branch = "feat/async", features = [
    "async",
    "ffi",
] }

wasmedge-sys = { git = "https://github.com/second-state/WasmEdge.git", branch = "feat/async", features = [
    "async",
    "ffi",
] }

wasmedge-types = { git = "https://github.com/second-state/WasmEdge.git", branch = "feat/async" }

tokio = { version = "1", features = ["full"] }

[workspace]
exclude = ["wasm"]
